# advent_of_code_2024

./: .env  README.md  main.py  pyproject.toml
src/common/: parser.py  script_path.py
src/day_01/: part2.py  test_day_01.py
src/day_02/: part1.py
