[tool.poetry]
name = "advent-of-code-2024"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode=false 

[tool.poetry.dependencies]
python = "^3.13"
pytest = "^8.3.4"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
